<resources>
    <string name="app_name">Presente</string>
    <string name="cerrar_sesion"><b>Cerrar sesión</b></string>
    <string name="app_version">2022.06.21 V4.0.2</string>
    <string name="app_splash">Preparando la aplicación&#8230;</string>
    <string name="encuentra_servicios"><b>Hola #usuario#,</b> encuentra servicios en:</string>
    <string name="te_interesa"><b>Te puede</b> interesar:</string>
    <string name="ultima_fecha_ingreso"><b>Última fecha ingreso:</b></string>
    <string name="menu_finanzass"><b>Mis finanzas</b></string>
    <string name="menu_centros_vacacionales"><b>Centros Vacacionales</b></string>
    <string name="menu_convenios"><b>Convenios</b></string>
    <string name="opciones_que_te"><b>Opciones</b> que te pueden ser útiles:</string>
    <string name="title_terminos_uso"><b>TÉRMINOS DE USO</b></string>
    <string name="terminos_uso"><b>Fondo de Empleados Almacenes Éxito-Presente APP</b>, es un servicio establecido por
        FONDO DE EMPLEADOS ALMACENES ÉXITO-PRESENTE para facilitar a sus asociados el acceso a sus productos y servicios. \n\nA través de
        <b>Fondo de Empleados Almacenes Exito-Presente APP</b> se suministra información sobre el portafolio de los Productos y
        Servicios. En cumplimiento de las normas legales para el uso de aplicaciones móviles,  FONDO DE EMPLEADOS ALMACENES
        ÉXITO PRESENTE establece a continuación las condiciones para el uso de la aplicación <b>Fondo de Empleados Almacenes Exito-Presente APP</b>.
        Por favor léalas cuidadosamente. \n\nSi usted no acepta los Términos y Condiciones establecidos aquí, no podrá acceder ni utilizar los
        servicios de la aplicación <b>Fondo de Empleados Almacenes Exito-Presente APP</b>. \n\nAl hacer click en el ícono <b>“ACEPTAR”</b>,
        usted habrá manifestado su aceptación a este Aviso Legal y por lo tanto a los Términos y Condiciones de uso acá establecidos.
        Con la aceptación de las condiciones de uso de la aplicación <b>Fondo de Empleados Almacenes Exito-Presente APP</b>, el usuario se
        obliga a usar su contenido conforme la normatividad que rige la materia y los términos y condiciones que aquí se contemplan,
        siempre en observancia de la Ley, la moral, la confidencialidad y las buenas costumbres; así mismo, se compromete a no destinar su
        uso a fines ilícitos o inmorales, o en detrimento de los intereses de terceros o del FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE.
        \n\nACERCA DEL CONTENIDO  FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE se reserva la facultad de modificar el contenido y/o el
        servicio de la aplicación en cualquier momento que lo crea pertinente <b>FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE APP</b> por sí
        mismo o mediante un tercero autorizado, sin notificar previamente al usuario o al prestador. \n\nFONDO DE EMPLEADOS ALMACENES
        EXITO-PRESENTE no es ni será responsable de cualquier pérdida o daño causado por o al usuario o prestador, derivados del uso de
        la actual aplicación. \n\nEl usuario declara conocer con la aceptación de las condiciones de uso de la aplicación <b>FONDO DE
        EMPLEADOS ALMACENES EXITO-PRESENTE APP</b>, que cualquier contenido que se publique en esta aplicación, es suministrado por
        personal adscrito a FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE, y por lo tanto  FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE
        se exime de cualquier responsabilidad relacionada con su interpretación, aplicación o uso. \n\nEstá prohibida la transmisión,
        transferencia, reforma, publicación, reproducción, distribución, venta, arrendamiento o comercialización de dicha información sin
        autorización. \n\nACERCA DEL SERVICIO FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE  no garantiza el acceso permanente e ininterrumpido
        a la aplicación <b>FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE APP</b>, cuando el usuario acceda será su responsabilidad, tomar las
        medidas pertinentes para evitar y/o corregir los virus u otros agentes nocivos existentes. FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE ha
        implementado los procedimientos electrónicos y administrativos para proteger y ayudar a prevenir el acceso no autorizado, evitar la pérdida,
        mal uso, alteración, acceso no autorizado y hurto de los datos personales. \n\nA través de <b>FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE APP</b>,
        el usuario podrá acceder a los siguientes servicios: \n\n(i) Consulta de saldos, \n(ii) Estado de sus productos actuales;
        \n(iii) Últimos movimientos realizados en sus productos a través de los canales autorizados por FONDO DE EMPLEADOS ALMACENES
        EXITO-PRESENTE, \n(iv) Mensajes de Notificación \n(v) Ubicación de oficinas, cajeros, almacenes y centros vacacionales
        \n(vi) Apertura de ahorros \n(vii) Abonos a créditos \n(viii) Solicitar centros vacacionales \n(ix) Activación y bloqueo de Tarjeta
        \n(x) Adquisición de servicios y responseConvenios, así como el pago recurrente o débito automático \n(xi) cualquier otros servicios que FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE en el futuro decida ofrecer. \n\nEl usuario será el
        único responsable del uso de la información contenida en la aplicación <b>FONDO DE EMPLEADOS ALMACENES EXITO-PRESENTE APP</b>.
    </string>
    <string name="transferencias">Transferencias</string>
    <string name="title_activity_activity_directorio">ActivityDirectorio</string>
    <string name="title_activity_actualizacion_Datos">ActivityActualizacionDatos</string>
    <string name="cuenta_origen">Cuenta de origen</string>
    <string name="cuenta_destino">Cuenta de destino</string>
    <string name="valor_transferencia">Valor a transferir</string>
    <string name="btn_realizar_transferencia">Realizar transferencia</string>
    <string name="lblInscribirNuevaCuenta">Inscribir nueva cuenta destino</string>
    <string name="lblBorrarCuentaInscrita">Borrar cuenta destino inscrita</string>
    <string name="error_cuenta_origen">Para realizar la transacción debes seleccionar la cuenta de origen y destino</string>
    <string name="error_valor_transfer">Ingresa el valor a transferir</string>
    <string name="error_valor_min_transfer">Puedes transferir mínimo $5.000</string>
    <string name="alerta_valor_disponible">Valor disponible a transferir hoy es </string>
    <string name="error_cuenta_borrar">Debe seleccionar la/las cuentas a borrar</string>
    <string name="error_cuentas_no_encontradas">No se encontraron cuentas inscritas</string>
    <string name="digite_cedula_destinatario">Digita la cédula del destinatario</string>
    <string name="salir">Salir</string>
    <string name="salir_del_tutorial"><u>Salir del tutorial</u></string>
    <string name="filtrar_por_tipo">Tipo:</string>
    <string name="filtrar_por_ciudad">Ciudad:</string>
    <string name="filtrar_por_almacen">Almacen:</string>
    <string name="encuentranos_aqui">Encuéntranos aquí</string>
    <string name="buzon_de_mensajes">Buzón de mensajes</string>
    <string name="responseConvenios">Convenios</string>
    <string name="aceptar">Aceptar</string>
    <string name="dependenciadiferente">Si ésta <b>no</b> es tu dependencia, edita la información de envío antes de continuar</string>
    <string name="segun_terminos">Este valor se calcula según los términos y condiciones del
    producto. Consúltalos <a href="https://www.presente.com.co/wp-content/uploads/2020/08/Terminos-y-condiciones-adelanto-de-nomina.pdf">aquí</a>.</string>
    <string name="acepto_que_se">Acepto que se lleve a cabo el movimiento financiero “Adelanto de
    Nomina” y entiendo sus condiciones de uso. Autorizo a debitar de
    mi cuenta de ahorros Nómina de PRESENTE, en la quincena
    inmediatamente posterior al desembolso de Adelanto de Nómina
    sin previo aviso, todas las sumas que por tal concepto se
    encuentren pendientes con PRESENTE.</string>
    <string name="ahora_tu_informacion"><b>Ahora tu información la podrás</b></string>
    <string name="actualizar_en_cualquier">actualizar en cualquier momento desde nuestra app.</string>
    <string name="porque_es_importante"><b>¿Por qué es importante esta actualización?</b></string>
    <string name="te_permite_estar">Te permite estar al tanto de cualquier servicio que solicitas en PRESENTE, como: notificaciones de reserva, solicitudes de crédito, etc.</string>
    <string name="podremos_estar_en">Podremos estar en contacto para notificarte cualquier novedad con tus productos.</string>
    <string name="enterate_de_primera">Entérate de primera mano de las noticias, actividades y beneficios que tenemos para ti.</string>
    <string name="usuario">Usuario</string>
    <string name="una_comunicacion_directa">Una comunicación directa y clara, es nuestro objetivo. Por eso te pedimos actualizar la siguiente información para mantenernos en contacto.</string>
    <string name="a_continuacion_encuentra">A continuación encuentra los campos necesarios para completar la actualización de datos, todos son obligatorios para finalizar</string>
    <string name="nombre_completo"><font fgcolor="#ffb600">*</font>Nombre completo:</string>
    <string name="celular"><font fgcolor="#ffb600">*</font>Celular:</string>
    <string name="correo_electronico"><font fgcolor="#ffb600">*</font>Correo electrónico:</string>
    <string name="el_correo_electronico">El correo electrónico, <b>lo usamos para enviarte notificaciones de tus productos, novedades y noticias</b> de PRESENTE.</string>
    <string name="falta_poco"><b>Falta poco...</b></string>
    <string name="pais"><font fgcolor="#ffb600">*</font>País:</string>
    <string name="departamento"><font fgcolor="#ffb600">*</font>Departamento:</string>
    <string name="ciudad"><font fgcolor="#ffb600">*</font>Ciudad:</string>
    <string name="barrio"><font fgcolor="#ffb600">*</font>Barrio:</string>
    <string name="direccion"><font fgcolor="#ffb600">*</font>Dirección:</string>
    <string name="tipo_via"><font fgcolor="#ffb600">*</font>Tipo de vía:</string>
    <string name="numero_via"><font fgcolor="#ffb600">*</font>Número vía:</string>
    <string name="letra_via">Letra:</string>
    <string name="complemento_via">Complemento:</string>
    <string name="numero_via2"><font fgcolor="#ffb600">*</font>Número vía:</string>
    <string name="letra_via2">Letra:</string>
    <string name="complemento_via2">Complemento:</string>
    <string name="numero_complemento"><font fgcolor="#ffb600">*</font>Número vía:</string>
    <string name="selecciona_cada_uno"><b>Selecciona cada uno de los elementos</b> que componen tu dirección.</string>
    <string name="informacion_adicional">Información adicional:</string>
    <string name="por_ejemplo">Por ejemplo: apto 34 / torre 3 / unidad 2</string>
    <string name="has_ingresado_la"><b>Has ingresado la siguiente dirección:</b></string>
    <string name="si_no_aplica">Si no aplica para tu dirección ingresa 0</string>
    <string name="confirmanos"><b>Confírmanos...</b></string>
    <string name="te_compartimos_la">Te compartimos la información que tenemos registrada, cuéntanos si continúa igual o ha tenido algún cambio.</string>
    <string name="es_correcta_esta"><b>¿Es correcta </b>esta información?</string>
    <string name="nombre_validar"><b>Nombre:</b></string>
    <string name="direccion_validar"><b>Dirección:</b></string>
    <string name="departamento_validar"><b>Departamento:</b></string>
    <string name="ciudad_validar"><b>Ciudad:</b></string>
    <string name="correo_validar"><b>Correo electrónico:</b></string>
    <string name="celular_validar"><b>Celular:</b></string>
    <string name="informacion_personal_menu"> Mi información personal</string>
    <string name="centro_ayuda">Ir al Centro de ayuda</string>
    <string name="conoce_gestor">Conoce tu Gestor</string>
    <string name="Vincular_cuenta">Vincula tu cuenta a Nequi</string>
</resources>