<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/btn_mi_informacion"
            android:icon="@drawable/icon_inf_personal"
            android:title="@string/informacion_personal_menu" />
        <item
            android:id="@+id/btn_CentroAyuda"
            android:icon="@drawable/icon_centro_ayuda"
            android:title="@string/centro_ayuda" />
        <item
            android:id="@+id/btn_ConoceGestor"
            android:icon="@drawable/icon_gestor"
            android:title="@string/conoce_gestor" />
        <item
            android:id="@+id/btn_Nequi"
            android:icon="@drawable/icon_nequi"
            android:title="@string/Vincular_cuenta" />
        <!-- <item
             android:id="@+id/btn_seguridad"
             android:icon="@drawable/icon_seguridad"
             android:title="@string/seguridad" /> -->

    </group>

</menu>