<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:background="#fff"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_splash" />

    <ProgressBar
        android:id="@+id/circular_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:paddingTop="50dp" />

    <TextView
        android:layout_below="@+id/circular_progress_bar"
        android:id="@+id/text_circular_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/app_splash"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#999"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_light"
        android:layout_alignParentBottom="false"/>

    <TextView
        android:layout_below="@+id/text_circular_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#999"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_light"/>

    <View
        android:layout_below="@+id/imageView1"
        android:id="@+id/view_yellos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"/>

</RelativeLayout>