<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:background="@drawable/background_actualizacion_datos">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="36"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="44"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="71dp"
                android:layout_height="74dp"
                android:background="@drawable/icon_presente">
            </ImageView>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ahora_tu_informacion"
                    android:textColor="#4A4A49"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/actualizar_en_cualquier"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto"
                    android:textColor="#4A4A49"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/porque_es_importante"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto"
                    android:textColor="#4A4A49"
                    android:paddingVertical="8dp"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_list_act_datos" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15sp"
                        android:text="@string/te_permite_estar"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="#4A4A49"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_list_act_datos" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15sp"
                        android:text="@string/podremos_estar_en"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="#4A4A49"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_list_act_datos" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15sp"
                        android:text="@string/enterate_de_primera"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto"
                        android:textColor="#4A4A49"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnContinuar_actDatos"
                        android:layout_width="166dp"
                        android:layout_height="37dp"
                        android:layout_gravity="right"
                        android:background="@drawable/backgroun_button_rounded"
                        android:backgroundTint="@color/yellow"
                        android:text="Continuar"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#4A4A49"
                        android:textSize="16sp"
                        android:fontFamily="@font/roboto_light"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>