<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris"
        android:gravity="center"
        android:padding="6dp"
        android:text="Transferencias"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_light"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="100"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="84"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:text="Tope máximo de transacciones: "
                    android:textSize="17sp"
                    android:fontFamily="@font/roboto_light"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtAvaliable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="2dp"
                        android:text="Valor disponible: "
                        android:textSize="17sp"
                        android:fontFamily="@font/roboto_light"/>

                    <TextView
                        android:id="@+id/txtAvaliableSaldo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="2dp"
                        android:text="$0.00"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:fontFamily="@font/roboto_light"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuenta_origen"
                    android:textSize="17sp"
                    android:fontFamily="@font/roboto_light"/>

                <Spinner
                    android:id="@+id/spCuentaOrigen"
                    android:background="@drawable/background_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"/>

                <TextView
                    android:id="@+id/tv_cuenta_destino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cuenta_destino"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#ccc"
                    android:visibility="visible"
                    android:fontFamily="@font/roboto_light"/>

                <Spinner
                    android:id="@+id/spCuentaDestino"
                    android:background="@drawable/background_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"/>

                <TextView
                    android:id="@+id/lbl_inscribir_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="2dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/lblInscribirNuevaCuenta"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/holo_blue_dark"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:drawableLeft="@drawable/icon_plus"/>

                <TextView
                    android:id="@+id/lbl_borrar_cuenta_inscrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="2dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:text="@string/lblBorrarCuentaInscrita"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/holo_blue_dark"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/icon_minus"/>

                <TextView
                    android:id="@+id/tv_valor_transferencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/valor_transferencia"
                    android:textColor="#ccc"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:fontFamily="@font/roboto_light"/>

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/txtValorTransferencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroun_border_radius"
                    android:ems="10"
                    android:maxLength="12"
                    android:inputType="number|numberDecimal"
                    android:padding="10dp"
                    android:enabled="false"
                    android:textSize="17sp"
                    android:fontFamily="@font/roboto_light"/>

                <Button
                    android:id="@+id/button_transferir"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/btn_realizar_transferencia"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:background="@drawable/btn_yellow_internal"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/roboto"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>